tests/programs/invalid/float.java
public class float {
  protected float x;
}